# ledify

./: .gitignore  .gitmodules  LICENSE  README.md  debug.sh  ledify.service  pilight-config.json  release.sh  setup-development.sh
LightLib/: CMakeLists.txt
LightLib/src/: CMakeLists.txt  CommandReader.cpp  CommandReader.h  SerialParser.cpp  SerialParser.h  definitions.h  main.cpp
LightLib/test/: CMakeLists.txt  CommandReaderTest.cpp  SerialParserTest.cpp  SerialParserTest.h
ledify/: CMakeLists.txt  library.properties
ledify/src/: CMakeLists.txt  CenterToEdgesAnimationLayer.h  ColorConversion.cpp  ColorConversion.h  ColorLayer.cpp  ColorLayer.h  CommandExecutor.cpp  CommandExecutor.h  CommandReader.cpp  CommandReader.h  Config.cpp  Config.h  Daytime.cpp  Daytime.h  FadeLayer.cpp  FadeLayer.h  FakeNeoPixelLib.cpp  FakeNeoPixelLib.h  FpsCalculator.cpp  FpsCalculator.h  ILedStrip.h  IRelayController.cpp  IRelayController.h  IWiringPi.h  Interpolator.cpp  Interpolator.h  Layer.cpp  Layer.h  LayerController.cpp  LayerController.h  LedStripController.cpp  LedStripController.h  MockLedStrip.cpp  MockLedStrip.h  MockRelayController.cpp  MockRelayController.h  MockWiringPi.cpp  MockWiringPi.h  RandomLayer.cpp  RandomLayer.h  (+30 more)
ledify/src/Dusk2Dawn/: Dusk2Dawn.h
ledify/src/Dusk2Dawn/Dusk2Dawn_tmp/: Dusk2Dawn.cpp
ledify/src/layers/: AdditionLayer.cpp  AdditionLayer.h  CMakeLists.txt  CenterToEdgesAnimationLayer.cpp  CenterToEdgesAnimationLayer.h  ChristmasLayer.cpp  ChristmasLayer.h  Color.cpp  Color.h  ColorLayer.cpp  ColorLayer.h  FadeLayer.cpp  FadeLayer.h  Layer.cpp  Layer.h  RandomLayer.cpp  RandomLayer.h  SlideAnimationLayer.cpp  SlideAnimationLayer.h  SpotLayer.cpp  SpotLayer.h  StartLayer.cpp  StartLayer.h
ledify/test/: AlwaysOnRelayController.h  CMakeLists.txt  ColorConversionTest.cpp  ColorConversionTest.h  ColorLayerTest.cpp  ColorLayerTest.h  CommandReaderTest.cpp  CommandReaderTest.h  DaytimeTest.cpp  DaytimeTest.h  FadeLayerTest.cpp  FadeLayerTest.h  LedStripControllerTest.cpp  LedStripControllerTest.h  SmokeTest.cpp  SmokeTest.h  SmokeTestResources.qrc
ledify/test/SmokeTestFiles/: complex-coded-on.txt  on.txt
