find_package(Qt5 COMPONENTS Core Test)

macro(addQtTest TestLibrary)
    set (ExtraLibraries ${ARGN})
    set (TestName ${TestLibrary}Test)
    add_executable (${TestName} ${TestName}.cpp ${TestName}.h)
    target_include_directories(${TestName} PRIVATE ../src ../src/layers)
    add_test (NAME ${TestName} COMMAND ${TestName})
    target_link_libraries (${TestName} ${TestLibrary} ${ExtraLibraries} Qt5::Core Qt5::Test)
endmacro()

addQtTest(CommandReader)
addQtTest(ColorLayer Layer)
addQtTest(FadeLayer ColorLayer StartLayer TimeControl Layer)
addQtTest(LedStripController CommandReader FadeLayer ColorLayer StartLayer TimeControl MockLedStrip MockRelayController)
addQtTest(Daytime)
